# clariad

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  docs_rename_needed.txt  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: feature_request.md  user_story.md
.github/workflows/: README.md  ci.yml  code-tests.yml  documentation-lint.yml  infra-tests.yml  markdown-link-check-config.json
docs/: 20250517-notes.md  Architecture.md  Getting_Started.md  Initial_Feature_Epics.md  OKRs.md  README.md  UserStories.md  Vision_and_Scope.md  architecture-heading-fix.md  documentation-style-guide.md  getting-started.md
docs/architecture/: ADR-001-multi-agent-architecture.md  ADR-002-langgraph-orchestration.md  ADR-003-semantic-memory.md  ADR-004-mcp-protocol.md  ADR-005-github-integration.md  ADR-006-observability-langfuse.md  ADR-007-python-language.md  ADR-008-error-handling.md  ADR-009-agent-prompt-design.md  README.md  system-diagrams.md  (+3 more)
docs_backup_20250518_181322/: 20250517-notes.md  Architecture.md  Getting_Started.md  Initial_Feature_Epics.md  OKRs.md  UserStories.md  Vision_and_Scope.md  architecture-heading-fix.md  documentation-audit-summary.md  documentation-improvement-plan.md  documentation-style-guide.md  getting-started.md  troubleshooting.md
hooks/: pre-commit
scripts/: fix-documentation.sh  init-vector-db.sql  load_env.sh  register_mcp.sh  run_tests.sh  setup_dev.sh  test-vector-db.sh  test_ci.sh  test_mcp.sh  test_mcp_invoke.sh  test_mcp_simple.sh
tests/: README.md  __init__.py  conftest.py
(+119 files in other folders)
